[File] 파일 테스트 추가 및 로직 수정 (#51)
* [FileStorage] 파일 URL 생성 로직 FileStorageService로 통합 및 LocalStorageProperties 제거

[feat] FileStorageService 인터페이스에 getFileUrl(), getBaseUrl() 추가 및 구현체 반영
* LocalFileStorageService: getFullFileUrl() 헬퍼로 null 체크 및 URL 조립 통합
* S3FileStorageService: generatePublicBaseUrl() 분리 후 getFileUrl() / getBaseUrl() 구현

[refactor] PostServiceImpl URL 조립 로직을 FileStorageService 위임으로 교체
* @Value("${storage.base-url}") 및 toFileUrl() 헬퍼 제거
* fileStorageService.getFileUrl() / getBaseUrl() 호출로 대체

[refactor] FileUploadResponse → FileResponse 이름 변경 및 fileUrl 필드 추가
* from() 팩토리 메서드에 fileUrl 파라미터 추가
* Controller, ControllerDocs import 및 반환 타입 일괄 수정

[delete] LocalStorageProperties 클래스 제거, @Value 직접 주입으로 전환
* LocalFileStorageService, LocalStorageConfig에서 @Value("${file.local.upload-dir/base-url}") 직접 주입

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* [File] FileResponse.from 파라미터 누락 수정 및 FileStorageService 단위 테스트 추가

[fix] FileUploadController에서 FileResponse.from() 파라미터 누락 수정
* fileStorageService.getFileUrl()로 fileUrl 조회 후 from(fileMetadata, fileUrl) 호출

[feat] LocalFileStorageService, S3FileStorageService 단위 테스트 추가
* YamlPropertiesFactoryBean으로 application-test.yml 상수 로딩 (하드코딩 제거)
* @TempDir 활용한 실제 파일 I/O 검증 (deleteFile, deleteFiles)
* getFileUrl / getBaseUrl / getPresignedUrl / deleteFile / deleteFiles 전 케이스 커버

[chore] application-test.yml 로컬 파일 저장 경로 /test 서브디렉토리로 분리
* upload-dir: ./test-uploads → ./uploads/test
* base-url: http://localhost:8080/files → http://localhost:8080/files/test